# Stereo_SynthPOC

./: .gitignore  .gitmodules  CMakeLists.txt  calibration.xml  readme.md
Classical/: CMakeLists.txt
Classical/includes/: ClassicalStereo.hpp
Classical/src/: ClassicalStereo.cpp
Detectors/: CMakeLists.txt
Detectors/includes/: Detectors.hpp
StereoCommon/: CMakeLists.txt
StereoCommon/includes/: PreviewArgs.hpp
StereoPipeline/: CMakeLists.txt  package.xml
StereoPipeline/Classical/includes/: ClassicalStereo.hpp
StereoPipeline/Classical/src/: ClassicalStereo.cpp
StereoPipeline/Detectors/: CMakeLists.txt
StereoPipeline/Detectors/includes/: Detectors.hpp
StereoPipeline/Detectors/src/: Detectors.cpp
StereoPipeline/StereoCommon/includes/: ConeColorID.hpp  ConeEst.hpp  ConeROI.hpp
includes/: Detectors.hpp
mur_stereo_basler/includes/: GeniPylon.hpp
mur_stereo_basler/src/: main.cpp
mur_stereo_image/src/: main.cpp
mur_stereo_pipeline/: CMakeLists.txt
mur_stereo_pipeline/Classical/: CMakeLists.txt
mur_stereo_pipeline/StereoCommon/: CMakeLists.txt
mur_stereo_pipeline/StereoCommon/includes/: ConeROI.hpp
mur_stereo_pipeline/includes/Classical/: ClassicalStereo.hpp
mur_stereo_pipeline/includes/Detectors/: Detectors.hpp
mur_stereo_pipeline/includes/StereoCommon/: ConeColorID.hpp
mur_stereo_pipeline/src/Classical/: ClassicalStereo.cpp
mur_stereo_pipeline/src/Detectors/: Detectors.cpp
mur_stereo_ros/: CMakeLists.txt  package.xml
mur_stereo_ros/src/: mur_stereo_ros_node.cpp
mur_stereo_video/src/: main.cpp
src/: Detectors.cpp  main.cpp
