<?xml version="1.0"?>
<package format="2">
  <name>StereoPipelineLib</name>
  <version>0.0.0</version>
  <description>The StereoPipelineLib package</description>

  <maintainer email="andrew@todo.todo">andrew</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
